[package]
name = "global-ip-announcer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
serenity = "0.12"
thiserror = "2"
tokio = { version = "1.48.0", features = ["full"] }